--- a/src/style.css
+++ b/src/style.css
@@ -67,14 +67,15 @@ code {
 }
 
 #app {
-  /* width: 100vw;
-  height: 100vh; */
-  width: 850px;
-  height: 600px;
+  width: 100vw;
+  height: 100vh;
+  /* width: 850px; */
+  /* height: 600px; */
   /* border: 1px solid; */
   /* overflow: auto; */
   font-family: "Microsoft Yahei", "PingFang SC", system-ui, 微软雅黑;
   position: relative;
+  overflow: hidden;
 }
 /* 自定义滚动条的样式 */
 ::-webkit-scrollbar {
